# manfred

./: .gitignore  .mcp.json  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
src/: .env.EXAMPLE  alembic.ini  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 0001_initial_chat_setup.py  0002_add_attachments.py  0003_add_agent_waiting_state.py  0f4f6d22f8b9_basic_chat_improvements.py  32cc87c13998_init_schema.py  7c1b4f4d7c2a_add_agent_name_to_agents.py  9a28b8b3f1a2_add_trace_id_to_agents.py  a1b2c3d4e5f6_add_workspace_path_to_sessions.py  d2b70d60cda9_.py
src/app/: config.py  container.py  logging_config.py  main.py
src/app/api/: cors.py
src/app/chat/: graph_builder.py  state.py
src/app/core/: config.py
src/app/db/: base.py
src/app/domain/: __init__.py  agent.py  attachment.py  chat.py  item.py  provider.py  queued_input.py  session.py  session_history.py  tool.py  types.py  user.py  waiting.py
src/app/events/: __init__.py  event_bus.py
src/app/infra/: container.py
src/app/mcp/: __init__.py  client.py  config.py  types.py
src/app/observability/: __init__.py  event_logger.py  langfuse_service.py  langfuse_subscriber.py  markdown_event_logger.py
src/app/prompts/: system_prompt.md
src/app/providers/: __init__.py  base.py  openai.py  openrouter_provider.py  registry.py  types.py
src/app/runtime/: __init__.py  cancellation.py  message_queue.py  (+2 more)
src/tests/: conftest.py  test_agent_loader.py  test_ai_devs_tools.py  test_attachment_services.py  test_audio_service.py  test_audio_tools.py  test_calculator_tool.py  test_chat_api.py  test_chat_service.py  test_chat_stream_api.py  test_event_bus.py  test_event_logger.py  test_file_tools.py  test_filesystem_service.py  test_fs_manage_tool.py  test_fs_read_tool.py  test_fs_search_tool.py  test_fs_write_tool.py  test_image_service.py  test_image_tools.py  test_langfuse_subscriber.py  test_mcp_config.py  test_observability_base.py  test_openai_provider.py  test_openrouter_provider_stream.py  test_runner.py  test_runner_events.py  test_session_history_service.py  test_sessions_api.py  test_settings.py  test_subagents.py  test_tiktokenizer_tool.py  test_tool_registry.py  test_wait_tool.py
(+171 files in other folders)
