[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.48.3",
    "fastapi>=0.135.1",
    "langfuse>=4.0.0",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-redis>=0.3.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.41.0",
]
